--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
     "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/font": "5.9.55",
     "@mdi/js": "^7.1.96",
+    "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.1.7",
+    "vuex": "^4.1.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
